# Lab1-2021111365

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: args.h  menu.h  ui.h  utils.h  wordMap.h
include/ui/: newt.h  text.h
src/: args.cc  main.cc  menu.cc  utils.cc  wordMap.cc
src/ui/: newt.cc  text.cc
