project(LAB1)
set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_COMPILER clang++)
#set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(include)
if(DEFINED NEWT_UI)
  add_compile_definitions(NEWT_UI)
  add_executable(main src/main.cc src/menu.cc src/ui/newt.cc src/ui/text.cc src/utils.cc src/args.cc src/wordMap.cc)
  target_link_libraries(main PUBLIC cgraph cdt gvc newt)
else()
  add_executable(main src/main.cc src/menu.cc src/ui/text.cc src/utils.cc src/args.cc src/wordMap.cc)
  target_link_libraries(main PUBLIC cgraph cdt gvc)
endif()
